# src/Mimo.Api.Sdk/Generated/Models/CreateMcpServerRequest.cs
@@ -1,0 +1,105 @@
+// <auto-generated/>
+#pragma warning disable CS0618
+using Microsoft.Kiota.Abstractions.Extensions;
+using Microsoft.Kiota.Abstractions.Serialization;
+using System.Collections.Generic;
+using System.IO;
+using System;
+namespace Mimo.Api.Sdk.Models
+{
+    [global::System.CodeDom.Compiler.GeneratedCode("Kiota", "1.0.0")]
+    #pragma warning disable CS1591
+    public partial class CreateMcpServerRequest : IAdditionalDataHolder, IParsable
+    #pragma warning restore CS1591
+    {
+        /// <summary>Stores additional data not described in the OpenAPI description found when deserializing. Can be used for serialization as well.</summary>
+        public IDictionary<string, object> AdditionalData { get; set; }
+        /// <summary>The allowedTools property</summary>
+#if NETSTANDARD2_1_OR_GREATER || NETCOREAPP3_1_OR_GREATER
+#nullable enable
+        public List<string>? AllowedTools { get; set; }
+#nullable restore
+#else
+        public List<string> AllowedTools { get; set; }
+#endif
+        /// <summary>The authToken property</summary>
+#if NETSTANDARD2_1_OR_GREATER || NETCOREAPP3_1_OR_GREATER
+#nullable enable
+        public string? AuthToken { get; set; }
+#nullable restore
+#else
+        public string AuthToken { get; set; }
+#endif
+        /// <summary>The endpoint property</summary>
+#if NETSTANDARD2_1_OR_GREATER || NETCOREAPP3_1_OR_GREATER
+#nullable enable
+        public string? Endpoint { get; set; }
+#nullable restore
+#else
+        public string Endpoint { get; set; }
+#endif
+        /// <summary>The isEnabled property</summary>
+        public bool? IsEnabled { get; set; }
+        /// <summary>The name property</summary>
+#if NETSTANDARD2_1_OR_GREATER || NETCOREAPP3_1_OR_GREATER
+#nullable enable
+        public string? Name { get; set; }
+#nullable restore
+#else
+        public string Name { get; set; }
+#endif
+        /// <summary>The timeoutSeconds property</summary>
+        public int? TimeoutSeconds { get; set; }
+        /// <summary>
+        /// Instantiates a new <see cref="global::Mimo.Api.Sdk.Models.CreateMcpServerRequest"/> and sets the default values.
+        /// </summary>
+        public CreateMcpServerRequest()
+        {
+            AdditionalData = new Dictionary<string, object>();
+            IsEnabled = true;
+            TimeoutSeconds = 30;
+        }
+        /// <summary>
+        /// Creates a new instance of the appropriate class based on discriminator value
+        /// </summary>
+        /// <returns>A <see cref="global::Mimo.Api.Sdk.Models.CreateMcpServerRequest"/></returns>
+        /// <param name="parseNode">The parse node to use to read the discriminator value and create the object</param>
+        public static global::Mimo.Api.Sdk.Models.CreateMcpServerRequest CreateFromDiscriminatorValue(IParseNode parseNode)
+        {
+            if(ReferenceEquals(parseNode, null)) throw new ArgumentNullException(nameof(parseNode));
+            return new global::Mimo.Api.Sdk.Models.CreateMcpServerRequest();
+        }
+        /// <summary>
+        /// The deserialization information for the current model
+        /// </summary>
+        /// <returns>A IDictionary&lt;string, Action&lt;IParseNode&gt;&gt;</returns>
+        public virtual IDictionary<string, Action<IParseNode>> GetFieldDeserializers()
+        {
+            return new Dictionary<string, Action<IParseNode>>
+            {
+                { "allowedTools", n => { AllowedTools = n.GetCollectionOfPrimitiveValues<string>()?.AsList(); } },
+                { "authToken", n => { AuthToken = n.GetStringValue(); } },
+                { "endpoint", n => { Endpoint = n.GetStringValue(); } },
+                { "isEnabled", n => { IsEnabled = n.GetBoolValue(); } },
+                { "name", n => { Name = n.GetStringValue(); } },
+                { "timeoutSeconds", n => { TimeoutSeconds = n.GetIntValue(); } },
+            };
+        }
+        /// <summary>
+        /// Serializes information the current object
+        /// </summary>
+        /// <param name="writer">Serialization writer to use to serialize this model</param>
+        public virtual void Serialize(ISerializationWriter writer)
+        {
+            if(ReferenceEquals(writer, null)) throw new ArgumentNullException(nameof(writer));
+            writer.WriteCollectionOfPrimitiveValues<string>("allowedTools", AllowedTools);
+            writer.WriteStringValue("authToken", AuthToken);
+            writer.WriteStringValue("endpoint", Endpoint);
+            writer.WriteBoolValue("isEnabled", IsEnabled);
+            writer.WriteStringValue("name", Name);
+            writer.WriteIntValue("timeoutSeconds", TimeoutSeconds);
+            writer.WriteAdditionalData(AdditionalData);
+        }
+    }
+}
+#pragma warning restore CS0618
